[gd_scene load_steps=12 format=3 uid="uid://co28w3xlatuha"]

[ext_resource type="Script" path="res://scripts/gui/title.gd" id="1_26i5r"]
[ext_resource type="Theme" uid="uid://b6u7qwmje5eat" path="res://themes/misc/main.tres" id="1_ghu40"]
[ext_resource type="Texture2D" uid="uid://ck3gf0tcqfff5" path="res://textures/gui/warehouse_panorama.png" id="1_r5ohn"]
[ext_resource type="Script" path="res://scripts/gui/camera_rotate.gd" id="2_bou7u"]
[ext_resource type="Shader" path="res://shaders/post/blur.gdshader" id="4_yo5b7"]
[ext_resource type="Texture2D" uid="uid://rs41fmknhi32" path="res://textures/gui/title.png" id="5_unws2"]
[ext_resource type="AudioStream" uid="uid://okoip6jdjihi" path="res://audio/music/title.mp3" id="7_5d0lq"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_hcxxv"]
panorama = ExtResource("1_r5ohn")

[sub_resource type="Sky" id="Sky_xx7f4"]
sky_material = SubResource("PanoramaSkyMaterial_hcxxv")

[sub_resource type="Environment" id="Environment_mgovp"]
background_mode = 2
sky = SubResource("Sky_xx7f4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8iron"]
shader = ExtResource("4_yo5b7")
shader_parameter/radius = 4.0
shader_parameter/steps = 32
shader_parameter/vertex_expand = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ghu40")
script = ExtResource("1_26i5r")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("2_bou7u")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mgovp")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8iron")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.25
offset_left = -135.0
offset_top = -32.0
offset_right = 135.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_unws2")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -318.0
offset_top = 320.0
offset_right = 318.0
offset_bottom = 801.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="Options" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Options"
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="Music" type="Node" parent="."]

[node name="Title" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("7_5d0lq")
autoplay = true

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
